Fix: fixed dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 /* Theme Variables */
+
 .theme-container.light-theme {
   --background-color: #f5f5f5;
   --text-color: #121212;
@@ -7,7 +8,7 @@
 }
 
 .theme-container.dark-theme {
-  --background-color: #121212;
+  --background-color: #1E1E1E;
   --text-color: #f1f1f1;
   --link-color: #bbbbbb;
   --link-hover-color: #ffffff;
@@ -22,15 +23,13 @@
   padding: 0;
 }
 
-html,
-body {
+/* Applica il colore di sfondo e il colore del testo per il tema corrente */
+html, body {
   width: 100%;
   height: 100%;
   font-family: "Lato", sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   background-color: var(--background-color);
+  color: var(--text-color);
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
@@ -41,9 +40,10 @@ body {
   justify-content: center;
   align-items: center;
   color: var(--text-color);
+  background-color: var(--background-color);
 }
 
-/* Main App Layout */
+/* Layout generale dell'applicazione */
 .App {
   width: 100%;
   max-width: 1200px;
@@ -54,20 +54,20 @@ body {
   align-items: center;
 }
 
-/* Profile Section and Who Am I */
+/* Profile Section */
 .profile-section {
   display: flex;
   align-items: center;
   gap: 2rem;
   margin-bottom: 2rem;
-  flex-wrap: wrap; /* Adjusts layout for mobile */
+  flex-wrap: wrap; /* Responsivo per mobile */
   text-align: center;
 }
 
 @media (max-width: 768px) {
   .profile-section {
     flex-direction: column;
-    align-items: center; /* Centers items for mobile */
+    align-items: center;
   }
 }
 
@@ -95,7 +95,6 @@ body {
   display: flex;
   gap: 1rem;
   margin-top: 0.5rem;
-  justify-content: center;
 }
 
 .social-links a,
@@ -133,13 +132,12 @@ body {
 .who-am-i p {
   font-size: 1rem;
   line-height: 1.6;
-  color: var(--text-color);
 }
 
 .who-am-i a {
   color: var(--link-color);
   text-decoration: none;
-  font-weight: 600; /* Lighter emphasis for external links */
+  font-weight: 600;
 }
 
 .who-am-i a:hover {
